--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "DerpoBot",
+  "name": "DErpoBot",
+  "description": "Very nice DerpoBot",
   "version": "1.0.0",
-  "description": "Discord bot made by Derp",
   "main": "bot.js",
-  "author": "DerpMeistah#6914",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "discord.io": "^2.5.3",
-    "winston": "^2.4.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
